# xau-autonomous-dqn-scalper

./: .dockerignore  .gitignore  Dockerfile  README.md  env_trading.py  model_dqn.py  pyproject.toml  test_dqn.py  train_dqn.py
.github/workflows/: ci.yml
tests/: test_pipelines.py
